[package]
name = "liner_broker"
version = "1.0.0"
edition = "2021"
exclude = [
"docs/*",
".vscode/*",
"cpp/*",
"include/*",
"python/*",
"target/*",
]
description = "Redis based message serverless broker."
readme = "README.md"
repository = "https://github.com/Tyill/liner"
authors = ["Alexander Medvedev al_medved@mail.ru"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_subscr"
path = "test/test_subscr.rs"

[[bin]]
name = "throughput_10k"
path = "benchmark/throughput_10k.rs"

[dependencies]
redis = "0.26.1"
rayon = "1.10"
zstd = "0.13"
libc = "0.2"
nohash-hasher = "0.2.0"

[features]
liner_debug = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
