[package]
name = "liner_broker"
version = "1.4.0"
edition = "2021"
keywords = ["broker", "serverless", "redis", "network"]
categories = ["concurrency", "asynchronous"]
exclude = [
".vscode/*",
"cpp/*",
"python/*",
"target/*",
]
description = "Redis based message serverless broker."
readme = "README.md"
repository = "https://github.com/Tyill/liner"
authors = ["Alexander Medvedev al_medved@mail.ru"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

#[[bin]]
#name = "test"
#path = "test/test.rs"

[[bin]]
name = "bench_pair_sendto_redis"
path = "benchmark/bench_pair_sendto_redis.rs"

[[bin]]
name = "bench_pair_sendto_sqlite"
path = "benchmark/bench_pair_sendto_sqlite.rs"

[[bin]]
name = "bench_pair_sendto_postgres"
path = "benchmark/bench_pair_sendto_postgres.rs"
required-features = ["postgres"]

[[bin]]
name = "one_to_one"
path = "rust/one_to_one.rs"

[[bin]]
name = "one_to_one_for_many"
path = "rust/one_to_one_for_many.rs"

[[bin]]
name = "one_to_many"
path = "rust/one_to_many.rs"

[[bin]]
name = "many_to_many"
path = "rust/many_to_many.rs"

[[bin]]
name = "producer_consumer"
path = "rust/producer_consumer.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "0.26.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
zstd = "0.13"
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
postgres = { version = "0.19", optional = true }

[features]
liner_debug = []
postgres = ["dep:postgres"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
